# jni_dev

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/coocaa/socket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  java_call_cpp.cpp  java_call_cpp.h  log_util.cpp  log_util.h  native-lib.cpp  net_server_manager.cpp  net_server_manager.h  pdu_base.h  pdu_util.cpp  pdu_util.h  sdk_manager.cpp  sdk_manager.h  singleton.h  tcp_client.cpp  tcp_client.h
app/src/main/cpp/log/: log_util.cpp  log_util.h
app/src/main/cpp/net/: pdu_base.cpp  pdu_base.h  pdu_util.cpp
app/src/main/cpp/net/tcp/client/: tcp_client.cpp  tcp_client.h
app/src/main/cpp/net/tcp/server/: net_base.cpp  net_base.h  poll.cpp  poll.h  request.cpp  request.h  socket_base.cpp  socket_base.h  tcpServer.cpp  tcpServer.h  tcp_server.cpp  tcp_server.h  uthash.h  xstring.cpp  xstring.h
app/src/main/cpp/platform/android/: JniHelper.cpp  JniHelper.h  cpp_call_java.cpp  cpp_call_java.h  java_call_cpp.cpp  java_call_cpp.h  jni_helper.cpp  jni_helper.h
app/src/main/java/com/coocaa/socket/: DeviceUtil.java  MainActivity.java  UtilJni.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/coocaa/socket/: ExampleUnitTest.java
